# easyword-translator

./: .gitignore  README.md  dictionary.csv  pyproject.toml  requirements.txt
.github/workflows/: main.yml
easyword_translator/: pdf.py  run.py
