[tool.poetry]
name = "easyword-translator"
version = "0.1.0"
description = ""
authors = ["Jay Lee <jaeho.lee@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.31.4"
pandas = "^2.2.2"
langchain-core = "^0.2.0"
langchain-upstage = "^0.1.5"
rapidfuzz = "^3.9.0"

[tool.poetry.scripts]
start = "easyword-translator.run:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
